# my-upc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  fly.toml  pyproject.toml
instance/: db.masterlist.sqlite3
templates/: index.html  search_results.html
